# wildfire-prediction-package

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.bat
frontend/: frontend.py
models/: encoder.pth  kmeans_model.pkl  scaler_model.pkl
predictions/: predictions.pkl
src/: __init__.py  main.py  prediction_cluster.py  prediction_hectare.py  preprocess.py  train.py
wildfire_prediction_package/: main.py  prediction_cluster.py  prediction_hectare.py  train.py
